--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archive</title>
+    <title>Finder</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="gallery">
-        <div class="media-container">
             <div class="markdown-heading" dir="auto"><h1 tabindex="-1" class="heading-element" dir="auto">Топ ботов для пробива информации в телеграм</h1><a id="user-content-топ-ботов-для-пробива-информации-в-телеграм" class="anchor" aria-label="Permalink: Топ ботов для пробива информации в телеграм" href="#топ-ботов-для-пробива-информации-в-телеграм"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></div>
             <p dir="auto"><a target="_blank" rel="noopener noreferrer" href="/leakinfobot/probiv/blob/main/.gitbook/assets/botiprobiva.webp"><img src="/leakinfobot/probiv/raw/main/.gitbook/assets/botiprobiva.webp" alt="" style="max-width: 100%;"></a></p>
             <div class="markdown-heading" dir="auto"><h2 tabindex="-1" class="heading-element" dir="auto"><strong>Топ ботов пробива:</strong> <a href="#b641" id="user-content-b641"></a></h2><a id="user-content-топ-ботов-пробива-" class="anchor" aria-label="Permalink: Топ ботов пробива:" href="#топ-ботов-пробива-"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></div>
@@ -128,6 +126,4 @@
             <p dir="auto"><a href="https://github.com/Alb-310/Geogramint">GeoGrammint</a> — покажет местонахождение ближайших пользователей Telegram на карте.</p>
             <p dir="auto"><a href="https://github.com/pielco11/telescan">Telescan</a> — поиск пользователей в группах по идентификатору, имени пользователя или номеру телефона.</p>
             <p dir="auto"><a href="https://github.com/cqcore/Telegram-OSINT">Telegram OSINT</a> — обновляемая подборка дополнительных инструментов для поиска информации в телеге.</p>
-        </div>
-    </div>
 </body>
